[gd_scene load_steps=6 format=3 uid="uid://buyricavq83bg"]

[ext_resource type="Script" path="res://Scripts/enemy.gd" id="1_d2eqd"]
[ext_resource type="Texture2D" uid="uid://gfbnf2173o86" path="res://Enemy1.png" id="2_hmflr"]
[ext_resource type="PackedScene" uid="uid://b5lsi63pghug5" path="res://Scenes/health.tscn" id="3_mab3d"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldb7u"]
size = Vector2(14, 14)

[sub_resource type="CircleShape2D" id="CircleShape2D_2obu3"]

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 7
script = ExtResource("1_d2eqd")

[node name="Icon" type="Sprite2D" parent="."]
texture = ExtResource("2_hmflr")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_ldb7u")

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource("CircleShape2D_2obu3")
debug_color = Color(1, 0.196078, 0.145098, 0.462745)

[node name="Health" parent="." instance=ExtResource("3_mab3d")]
offset_top = -38.0
offset_bottom = -34.0

[node name="Timers" type="Node" parent="."]

[node name="AttackResetTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true
one_shot = true

[node name="StaggerTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[node name="StaggerImmunityTimer" type="Timer" parent="Timers"]
unique_name_in_owner = true

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="zero_health" from="Health" to="." method="_on_health_zero_health"]
[connection signal="timeout" from="Timers/AttackResetTimer" to="." method="_on_attack_reset_timer_timeout"]
[connection signal="timeout" from="Timers/StaggerTimer" to="." method="_on_stagger_timer_timeout"]
[connection signal="timeout" from="Timers/StaggerImmunityTimer" to="." method="_on_stagger_immunity_timer_timeout"]
